--- a/clra.html
+++ b/clra.html
@@ -604,6 +604,7 @@
             max-width: 50%;
             margin: 10px;
             padding: 10px;
+            text-align: justify;
         }
         
         .startupfino-header {
@@ -878,7 +879,7 @@
 
     .startupfino-text {
         font-size: 1em;
-        text-align: left;
+        text-align: justify;
     }
 }
 
