8-4-2025 new 15 calculators added

--- a/environmentalsubcalculators.html
+++ b/environmentalsubcalculators.html
@@ -774,6 +774,8 @@
 <a href="microbialgrowthrate.html" class="calculator-btn">Biomass Microbial Growth Calculator</a>
 
 <a href="substrateutilizationrate.html" class="calculator-btn">Biomass Substrate Utilization Rate Calculator</a>
+<a href="bimoassconcentrationinreturnsludge.html" class="calculator-btn">Biomass Concentration (Xr) Calculator</a>
+
 
             <a href="carnoteffiencycalculator.html" class="calculator-btn">Carnot Efficiency Calculator</a>
             <a href="carbonfootprintefficiency.html" class="calculator-btn">Carbon Footprint Efficiency Calculator</a>
@@ -791,6 +793,7 @@
 <a href="disinfection.html" class="calculator-btn">Chlorine Contact Time Calculator</a>
 <a href="carmankozeny.html" class="calculator-btn">Carman-Kozen Head Loss & Friction Factor Calculator</a>
 <a href="disinfectionkinetics.html" class="calculator-btn">Chick’s Law: Microbial Disinfection Calculator</a>
+<a href="chemicalequilibrium.html" class="calculator-btn">Chemical Equilibrium Calculator</a>
 
 
 
@@ -928,6 +931,8 @@
 
 
             <a href="effectofoverburden.html" class="calculator-btn">Overburden Pressure Calculator</a>
+            <a href="oxygenrequirement.html" class="calculator-btn">Oxygen Requirement O2 Calculator - Activated Sludge Process</a>
+
 
 
 
@@ -961,6 +966,8 @@
 <a href="requiredventilationrate.html" class="calculator-btn">Required Ventilation Rate Calculator For Indoor Air Quality</a>
 <a href="reynoldsnumbercalculator.html" class="calculator-btn">Reynolds Flow Predictor Calculator</a>
 <a href="retentiontime.html" class="calculator-btn">Retention Time in Settling Zone (t) Calculator</a>
+<a href="rankinequation.html" class="calculator-btn">Rankin's Equation - Filter Efficiency Calculator</a>    
+
 
 
 
@@ -1021,6 +1028,10 @@
 <a href="lengthandwidth.html" class="calculator-btn">Sedimentation Tank Dimensions Calculator</a>
 
 <a href="sedimentationoverflow.html" class="calculator-btn">Sedimentation Overflow Rate Calculator</a>
+<a href="schieldsformula.html" class="calculator-btn">Scouring Velocity (V) Calculator - Schield’s Formula</a>
+<a href="sludgerecirculation.html" class="calculator-btn">Sludge Recirculation Rate (Qr) Calculator</a>
+
+
 
 
 
@@ -1107,7 +1118,10 @@
 
 
 
-       
+
+
+
+
 
 
         
