--- a/safetysubcalculators.html
+++ b/safetysubcalculators.html
@@ -1092,6 +1092,7 @@
 <a href="steamsizingcalculator.html" class="calculator-btn">Steam Sizing Calculator</a>
  <a href="safetystockcalculator.html" class="calculator-btn">Safety Stock Calculator</a> 
  <a href="safetyindexsi.html" class="calculator-btn">Safety Index (SI) Calculator</a>
+ <a href="safetyriskassessment.html" class="calculator-btn">Safety Risk Assessment Calculator</a>
 
 
 
