--- a/wintersequation.html
+++ b/wintersequation.html
@@ -300,8 +300,14 @@ select {
   
     <h3>How to Use the Calculator</h3>
     <p>To calculate the expected pCO₂ range, simply enter:</p>
+   
+    
     <ul>
       <li><strong>Bicarbonate (HCO₃⁻) concentration:</strong> In mmol/L (mEq/L). Normal: 22–26 mmol/L.</li>
+      <p >
+        HCO₃⁻ (Bicarbonate) is an essential buffer that helps regulate the body’s acid-base balance.  
+        It is measured in mmol/L through a blood test, usually from arterial or venous blood.
+      </p>
     </ul>
     <p>The result will provide an estimated pCO₂ range in <strong>mmHg</strong> (default) or <strong>kPa</strong>, depending on your selection.</p>
   
