--- a/healthsubcalculators.html
+++ b/healthsubcalculators.html
@@ -766,6 +766,8 @@
 
             <a href="absicalcualtor.html" class="calculator-btn">A Body Shape Index (ABSI) Calculator</a>
             <a href="a1c-calculator.html" class="calculator-btn">A1c Calculator – Hemoglobin A1c to Average Blood Sugar</a>
+            <a href="ageshockindexcalculator.html" class="calculator-btn">Age Shock Index (Age SI) Calculator</a>
+
 
 
             <a href="bmicalculator.html" class="calculator-btn">BMI Calculator</a>
@@ -784,6 +786,8 @@
             <a href="bloodsugarconverter.html" class="calculator-btn">Blood Sugar Converter</a>
             <a href="bedriddenpatientheightcalculator.html" class="calculator-btn">Bedridden Patient Height Estimator</a>
             <a href="bedriddenpatientweightestimator.html" class="calculator-btn">Bedridden Patient Weight Estimator</a>
+            <a href="babymilkintakecalculator.html" class="calculator-btn">Baby Milk Intake Calculator</a>
+
 
 
 
@@ -819,6 +823,7 @@
             <a href="heavinessofsmokingindex.html" class="calculator-btn">Heaviness of Smoking Index (HSI) Calculator</a>
             <a href="handarmcalculator.html" class="calculator-btn">Hand-Arm Vibration Exposure (HAV) Calculator-A(8) Value</a> 
             <a href="happinesscalculator.html" class="calculator-btn">Happiness Calculator</a> 
+            <a href="doseresponseprobit.html" class="calculator-btn">Dose-Response Probit Calculator</a>
 
 
 
@@ -836,6 +841,10 @@
 
 
             <a href="metabolicsyndromecalculator.html" class="calculator-btn">Metabolic Syndrome Calculator</a>
+            <a href="modifiedquantitycalculator.html" class="calculator-btn">Modified Shock Index (MSI) Calculator</a>
+            <a href="mapandppcalculator.html" class="calculator-btn">Mean Arterial Pressure (MAP) & Pulse Pressure (PP) Calculator</a>
+
+
 
 
 
@@ -852,7 +861,7 @@
 
 
             <a href="sleepcalculator.html" class="calculator-btn">Sleep Calculator</a>
-            <!-- <a href="shockindexcalculator.html" class="calculator-btn">Shock Index (SI) Calculator</a> -->
+            <a href="shockindexcalculator.html" class="calculator-btn">Shock Index (SI) Calculator</a>
 
 
 
