--- a/healthsubcalculators.html
+++ b/healthsubcalculators.html
@@ -767,6 +767,8 @@
             <a href="absicalcualtor.html" class="calculator-btn">A Body Shape Index (ABSI) Calculator</a>
             <a href="a1c-calculator.html" class="calculator-btn">A1c Calculator – Hemoglobin A1c to Average Blood Sugar</a>
             <a href="ageshockindexcalculator.html" class="calculator-btn">Age Shock Index (Age SI) Calculator</a>
+            <a href="alzheimerlifeexpectancycalculator.html" class="calculator-btn">Alzheimer’s Life Expectancy Calculator</a>
+
 
 
 
@@ -823,7 +825,11 @@
             <a href="heavinessofsmokingindex.html" class="calculator-btn">Heaviness of Smoking Index (HSI) Calculator</a>
             <a href="handarmcalculator.html" class="calculator-btn">Hand-Arm Vibration Exposure (HAV) Calculator-A(8) Value</a> 
             <a href="happinesscalculator.html" class="calculator-btn">Happiness Calculator</a> 
+            <a href="heartratecalculator.html" class="calculator-btn">HEART Score Calculator</a> 
+
             <a href="doseresponseprobit.html" class="calculator-btn">Dose-Response Probit Calculator</a>
+            <a href="dietriskscorecalculator.html" class="calculator-btn">Diet Risk Score Calculator</a>
+
 
 
 
@@ -862,6 +868,10 @@
 
             <a href="sleepcalculator.html" class="calculator-btn">Sleep Calculator</a>
             <a href="shockindexcalculator.html" class="calculator-btn">Shock Index (SI) Calculator</a>
+            <a href="strokevolumecalculator.html" class="calculator-btn">Stroke Volume (SV) Calculator</a>
+            <a href="strokevolumeindexcalculator.html" class="calculator-btn">Stroke Volume Index (SVI) Calculator</a>
+
+
 
 
 
