--- a/qualitysubcalculators.html
+++ b/qualitysubcalculators.html
@@ -765,6 +765,9 @@
             <a href="boilerhorsepowerfromheattransfersrea.html" class="calculator-btn">Boiler Horse Power From Heat Transfer Area Calculator</a>
             <a href="binomialdistributioncal.html" class="calculator-btn">Binomial Distribution Calculator</a>
             <a href="broadcalculationofgarments.html" class="calculator-btn">Broad Calculation of Garments Cost of Making (CM) </a>
+            <a href="boilingpointelevation.html" class="calculator-btn">Boiling Point Elevation Calculator</a>
+             
+
 
 
             <a href="correcttheconductivityofasample.html" class="calculator-btn">Correct The Conductivity Of A Sample Calculator</a>
@@ -800,6 +803,8 @@
             <a href="firstpassyieldcal.html" class="calculator-btn">First Pass Yield (FPY) Calculator</a>
             <a href="foldofincrease.html" class="calculator-btn">Fold of Increase Calculator</a>
             <a href="facadeelementweight.html" class="calculator-btn">Facade Element Weight Calculator </a>
+            <a href="gibbsphaserule.html" class="calculator-btn">Gibbs Phase Rule Calculator</a>
+
 
             <a href="heatexchangerheatingarea.html" class="calculator-btn">Heat Exchanger Heating Area Calculator</a>
             <a href="largestparticlesizethroughastrainerscreen.html" class="calculator-btn">Largest Particle Size Through a Strainer Screen Calculator</a>
