--- a/safetysubcalculators.html
+++ b/safetysubcalculators.html
@@ -836,6 +836,7 @@
 <a href="chemicalexposureburnrate.html" class="calculator-btn">Chemical Exposure Burn Severity Rate Calculator</a>
 <a href="compressibleflowcalculatorcraneequation.html" class="calculator-btn">Compressible Flow Calculator (Crane Equation 3-20)</a>
 <a href="compositerisk.html" class="calculator-btn">Composite Risk Calculator</a>
+<a href="clausiusclapeyronequation.html" class="calculator-btn">Clausius-Clapeyron Equation Calculator</a>
 
 
 
