--- a/shockindexcalculator.html
+++ b/shockindexcalculator.html
@@ -194,7 +194,7 @@ strong{
         <label for="systolicBP">Systolic Blood Pressure (SBP) (mmHg):</label>
         <input type="number" id="systolicBP" placeholder="Enter Systolic BP">
     </div>
-    <button class="cal-btn" onclick="calculateShockIndex()">Calculate SI</button>
+    <button class="cal-btn" onclick="calculateShockIndex()">Calculate Shock Index</button>
     <div class="result" id="result"></div>
 </div>
 
