--- a/strokevolumeindexcalculator.html
+++ b/strokevolumeindexcalculator.html
@@ -164,6 +164,49 @@ strong{
         padding: 10px; 
     }
 }
+.calculation-nav {
+  display: flex;
+  flex-direction: row; /* Ensures horizontal layout on desktop */
+  justify-content: center;
+  list-style-type: none;
+  padding: 0;
+}
+
+.calculation-item {
+  margin: 0 20px;
+}
+
+.calculation-link {
+  display: inline-block; /* Prevents full-width background */
+  background-color: #1560bd;
+  padding: 10px 20px;
+  color: white;
+  border-radius: 10px;
+  text-decoration: none;
+  font-size: 16px;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+
+
+@media (max-width: 768px) {
+  .calculation-nav {
+    flex-direction: column; /* Changes to vertical layout only for mobile */
+    align-items: center;
+  }
+
+  .calculation-item {
+    margin: 10px 0;
+  }
+
+  .calculation-link {
+    display: inline-block;
+    padding: 12px 25px;
+    font-size: 18px;
+    width: fit-content; /* Ensures the background does not stretch */
+  }
+}
+
 </style>
 	</head>
 
@@ -185,80 +228,91 @@ strong{
 
 
 <div class="calculator-container">
-    <h2>Age Shock Index (Age SI) Calculator</h2>
+    <h2>Stroke Volume Index (SVI) Calculator</h2>
     <div class="form-group">
-        <label for="age">Age (years):</label>
-        <input type="number" id="age" placeholder="Enter Age">
+        <label for="strokeVolume">Stroke Volume (mL/beat):</label>
+        <input type="number" id="strokeVolume" placeholder="Enter Stroke Volume" class="form-control">
     </div>
     <div class="form-group">
-        <label for="heartRate">Heart Rate (HR) (beats/minute):</label>
-        <input type="number" id="heartRate" placeholder="Enter Heart Rate">
+        <label for="bsa">Body Surface Area (BSA) (m²):</label>
+        <input type="number" id="bsa" placeholder="Enter BSA" class="form-control">
     </div>
-    <div class="form-group">
-        <label for="systolicBP">Systolic Blood Pressure (SBP) (mmHg):</label>
-        <input type="number" id="systolicBP" placeholder="Enter Systolic BP">
-    </div>
-    <button class="cal-btn" onclick="calculateAgeShockIndex()">Calculate Age Shock Index </button>
-    <div class="result" id="result"></div>
+    <button class="cal-btn" onclick="calculateSVI()">Calculate Stroke Volume Index</button>
+    <div class="result" id="sviResult"></div>
 </div>
 
-<div class="note-container">
-    <h3>What is Age Shock Index?</h3>
+<div class="note-container mt-4">
+    <h3>Note:</h3>
     <p>
-        The <strong>Age Shock Index (Age SI)</strong> is an advanced form of the traditional shock index. It incorporates the patient’s age along with their heart rate and systolic blood pressure to help predict the severity of a patient’s condition, especially in cases of acute myocardial infarction (AMI).
-    </p>
-    <h3>📌 Explanation of Parameters:</h4>
-    <ul>
-        <li><strong>Age (years):</strong> Older individuals generally have a higher baseline risk for cardiovascular issues. This factor adds context to heart rate and blood pressure readings.</li>
-        <li><strong>Heart Rate (beats/min):</strong> A high heart rate may signal physiological stress or shock. When combined with age, it reflects how much strain the body is under.</li>
-        <li><strong>Systolic Blood Pressure (mmHg):</strong> This is the pressure in your arteries when your heart beats. Lower values may indicate poor perfusion and possible circulatory failure.</li>
-    </ul>
-    <h3>How Is It Calculated?</h3>
-    <p>
-        To calculate the Age SI, you start by multiplying the patient’s age in years by their heart rate (measured in beats per minute). This combined value reflects the patient’s physiological stress level considering both age and heart activity. Next, you divide that value by the patient’s systolic blood pressure (SBP), which indicates how much pressure the blood exerts against artery walls when the heart beats.
-    </p>
-    <p>
-        By combining these three parameters, the Age SI gives a clearer picture of how well the cardiovascular system is handling stress.
+        <strong>Stroke Volume Index (SVI)</strong> provides an individualized measurement of heart efficiency by adjusting the volume of blood pumped with each heartbeat to the person’s body size. This allows for more accurate comparisons between individuals.
     </p>
 
-    <h3>Interpretation:</h3>
+    <h3>Understanding the Parameters:</h3>
     <ul>
-        <li><strong>Age SI ≤ 50:</strong> ✅ Normal — Suggests a lower risk for serious cardiac events.</li>
-        <li><strong>Age SI &gt; 50:</strong> ⚠️ Elevated — Indicates a potentially higher risk of mortality and may require urgent medical attention.</li>
+        <li>
+            <strong>Stroke Volume (SV):</strong> Volume of blood pumped per heartbeat. Measured in <strong>mL/beat</strong>.
+        </li>
+        <li>
+            <strong>Body Surface Area (BSA):</strong> Total surface area of the body, typically measured in <strong>square meters (m²)</strong>. It's used to normalize cardiovascular values.
+        </li>
     </ul>
 
-    <h3>Why It Matters:</h3>
+    <h3>Use of the Calculator:</h3>
     <p>
-        In fast-paced clinical environments like emergency rooms, the Age Shock Index can help healthcare professionals make quick and informed decisions. It has been shown to provide risk predictions similar to more complex tools like the GRACE score — but with much less time and effort at the bedside.
+        This calculator helps you estimate how much blood your heart pumps relative to your body size. It is helpful in clinical, fitness, and research settings to evaluate cardiac performance.
     </p>
+
+    <h3>Result Interpretation:</h3>
+    <ul>
+        <li><strong>SVI &lt; 33 mL/m²:</strong> May indicate reduced cardiac output. Further evaluation is recommended.</li>
+        <li><strong>SVI between 33 and 47 mL/m²:</strong> Normal range for healthy individuals.</li>
+        <li><strong>SVI &gt; 47 mL/m²:</strong> Indicates high cardiac efficiency; common in trained athletes.</li>
+    </ul>
+
+    <h3>Conclusion:</h3>
+    <p>
+        The Stroke Volume Index is a valuable tool for assessing how well the heart functions in relation to an individual's size. It enhances diagnostic accuracy and is useful in monitoring overall cardiovascular health.
+    </p>
+    <h3>How to calculate Stroke Volume and Body Surface Area ?</h3>
+    <p>
+      If you need more information on how to calculate the Stroke Volume and Body Surface Area , you can refer to the following resources:
+    </p>
+    <ul class="calculation-nav">
+        <li class="calculation-item">
+          <a href="strokevolumecalculator.html" class="calculation-link">Stroke Volume (SV) Calculator</a>
+        </li>
+        <li class="calculation-item">
+          <a href="bsacalcualtor.html" class="calculation-link">Body Surface Area (BSA) Calculator</a>
+        </li>
+      </ul>
 </div>
 
 <script>
-    function calculateAgeShockIndex() {
-        const age = parseFloat(document.getElementById('age').value);
-        const HR = parseFloat(document.getElementById('heartRate').value);
-        const SBP = parseFloat(document.getElementById('systolicBP').value);
+    function calculateSVI() {
+        const sv = parseFloat(document.getElementById('strokeVolume').value);
+        const bsa = parseFloat(document.getElementById('bsa').value);
+        const resultDiv = document.getElementById('sviResult');
 
-        if (isNaN(age) || isNaN(HR) || isNaN(SBP) || age <= 0 || HR <= 0 || SBP <= 0) {
-            document.getElementById('result').innerText = "Please enter valid values for all fields.";
+        if (isNaN(sv) || isNaN(bsa) || sv <= 0 || bsa <= 0) {
+            resultDiv.innerHTML = "<span style='color: red;'>Please enter valid positive numbers for both fields.</span>";
             return;
         }
 
-        const ageSI = (age * HR) / SBP;
-        let interpretation = "";
+        const svi = sv / bsa;
+        let feedback = "";
 
-        if (ageSI > 50) {
-            interpretation = "⚠️ Elevated: Increased risk of mortality — may indicate serious cardiovascular compromise, such as acute myocardial infarction (heart attack).";
+        if (svi < 33) {
+            feedback = "🔴 Low: May indicate reduced cardiac output. Clinical attention may be necessary.";
+        } else if (svi <= 47) {
+            feedback = "🟡 Normal: Stroke volume index is within a healthy range.";
         } else {
-            interpretation = "✅ Normal: Suggests stable cardiovascular status with a lower risk of heart-related complications.";
+            feedback = "🟢 High: Strong cardiac performance. Common in athletes or highly trained individuals.";
         }
 
-        document.getElementById('result').innerHTML = `
-            Age Shock Index: ${ageSI.toFixed(2)} <br>
-            <strong>Interpretation:</strong> ${interpretation}
-        `;
+        resultDiv.innerHTML = `Stroke Volume Index (SVI): <strong>${svi.toFixed(2)} mL/m²</strong><br><strong>Interpretation:</strong> ${feedback}`;
     }
 </script>
+
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
