--- a/healthsubcalculators.html
+++ b/healthsubcalculators.html
@@ -768,6 +768,8 @@
             <a href="a1c-calculator.html" class="calculator-btn">A1c Calculator – Hemoglobin A1c to Average Blood Sugar</a>
             <a href="ageshockindexcalculator.html" class="calculator-btn">Age Shock Index (Age SI) Calculator</a>
             <a href="alzheimerlifeexpectancycalculator.html" class="calculator-btn">Alzheimer’s Life Expectancy Calculator</a>
+            <a href="abicalculator.html" class="calculator-btn">Ankle-Brachial Index (ABI) Calculator</a>
+
 
 
 
@@ -806,10 +808,15 @@
             <a href="dietaryreferenceintakes.html" class="calculator-btn">Dietary Reference Intake (DRI) Calculator</a>
             <a href="diabetesriskcalculator.html" class="calculator-btn">Diabetes Risk Calculator – Estimate Your 7.5-Year Risk</a>
             <a href="depressionscreeningbyphqcalculator.html" class="calculator-btn">Depression Screening by PHQ-2 Calculator</a>
+            <a href="doseresponseprobit.html" class="calculator-btn">Dose-Response Probit Calculator</a>
+            <a href="dietriskscorecalculator.html" class="calculator-btn">Diet Risk Score Calculator</a>
 
 
+
+            <a href="estimatedaverageglucosecalculator.html" class="calculator-btn">Estimated Average Glucose Calculator</a>
 
             <a href="epworthsleepinessscale.html" class="calculator-btn">Epworth Sleepiness Scale (ESS) Calculator</a>
+ 
 
             <a href="fatfreemassindex.html" class="calculator-btn">Fat-Free Mass Index (FFMI) Calculator</a>
             <a href="fiberintakecalculator.html" class="calculator-btn">Fiber Intake Calculator</a>
@@ -820,6 +827,8 @@
 
             
             <a href="anxietyassessment.html" class="calculator-btn">Generalized Anxiety Disorder Assessment Calculator</a>
+            <a href="guptacalculator.html" class="calculator-btn">Gupta Perioperative Risk Calculator</a> 
+
             <a href="heatstressindex.html" class="calculator-btn">Heat Stress Index (HSI) Calculator</a>
             <a href="healthyweightcalcualtor.html" class="calculator-btn">Healthy Weight Calculator</a>
             <a href="heavinessofsmokingindex.html" class="calculator-btn">Heaviness of Smoking Index (HSI) Calculator</a>
@@ -827,8 +836,13 @@
             <a href="happinesscalculator.html" class="calculator-btn">Happiness Calculator</a> 
             <a href="heartratecalculator.html" class="calculator-btn">HEART Score Calculator</a> 
 
-            <a href="doseresponseprobit.html" class="calculator-btn">Dose-Response Probit Calculator</a>
-            <a href="dietriskscorecalculator.html" class="calculator-btn">Diet Risk Score Calculator</a>
+
+
+           
+            <a href="has-bledcalculator.html" class="calculator-btn">HAS-BLED Score Calculator</a>
+            <a href="homa-ir-calculator.html" class="calculator-btn">HOMA-IR Calculator — Insulin Resistance</a>
+
+
 
 
 
