12-4-2025 new 10 calculators added

--- a/safetysubcalculators.html
+++ b/safetysubcalculators.html
@@ -1044,6 +1044,7 @@
 <a href="reelandpaddle.html" class="calculator-btn">Reel and Paddle Power Calculator</a>
 
  <a href="riskindex.html" class="calculator-btn">Risk Index Calculator</a>
+ <a href="radialheatflowthroughcylinder.html" class="calculator-btn">Radial Heat Flow Through Cylinder Calculator</a>
 
 
 
