--- a/index.html
+++ b/index.html
@@ -1448,10 +1448,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                         A Skilled Administrative Support Professional.</h5>
                                                 </h2>
                                                 <p class="subtitle-element p-xl"> </p>
-                                                <div class="d-flex btn-trait-group flex-wrap justify-content-center gap-2 mb-2 " style="padding-bottom: 8px;">
+                                                <!-- <div class="d-flex btn-trait-group flex-wrap justify-content-center gap-2 mb-2 " style="padding-bottom: 8px;">
                                                     <a href="calculatorqehs.html" class="button-78" role="button"><i class="fas fa-calculator"></i>&nbsp &nbsp
 Explore 500+ QEHS And Fire Calculators</a>
-                                                </div>
+                                                </div> -->
                                                 <p></p>
                                             </div>
                                         </div>
@@ -1615,7 +1615,7 @@ Explore 500+ QEHS And Fire Calculators</a>
 									</a>
 								</div>
 								<div class="col-md-4 mt-3">
-									<a href="calculatorqehs.html" class="card-link">
+									<a href="#" class="card-link">
 										<div class="card">
 											<img src="images/vindus_clients_images/calculator.jpg" class="card-img-top lubdub" alt="QEHS Calculators">
 											<div class="card-body">
