--- a/footer.html
+++ b/footer.html
@@ -162,8 +162,58 @@
 	height: 420px;
 	overflow-y: scroll;
 }
+ 
 
-  
+ .social-icons a {
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+ 
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.social-icons a:hover {
+  transform: translateY(-4px);
+  box-shadow: 0 4px 12px rgba(0,0,0,0.4);
+}
+
+.address-box {
+  backdrop-filter: blur(6px);
+  transition: all 0.3s ease;
+}
+
+.address-box:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 6px 15px rgba(0, 180, 255, 0.3);
+}
+
+/* Responsive layout */
+@media (max-width: 768px) {
+  .social-icons {
+    padding: 0 !important;
+  }
+
+  .address-box {
+    margin: 20px auto 0 auto !important;
+    max-width: 90%;
+    text-align: center !important;
+  }
+
+  .address-box p {
+    text-align: center !important;
+    font-size: 14px;
+  }
+
+  .social-icons h6,
+  .address-box h6 {
+    text-align: center;
+  }
+
+  .social-icons div {
+    flex-wrap: wrap !important;
+  }
+}
+
 </style>
 	</head>
 
@@ -272,28 +322,39 @@
 					</div>	<!-- END FOOTER CONTENT -->
 
 
-					<hr>	<!-- FOOTER DIVIDER LINE -->
+					<hr> <!-- FOOTER DIVIDER LINE -->
 
-					<div class="container p-4 pb-0">
-						<!-- Section: Social media -->
-						<section class="mb-4">
-							<!-- Social media links -->
-							<!-- Facebook -->
-							<a data-mdb-ripple-init class="btn text-white btn-floating m-1" style="background-color: #3b5998;" href="https://www.facebook.com/people/Ghanta-Bharat/pfbid02E5p4iNHonymCDq917efmb1mu44dTg8gLaJtYmWX1H4uo7ekoPVZ1UfoeGDbX8Ltml/" role="button"><i class="fab fa-facebook-f"></i></a>
-							<!-- youtube -->
-							<a data-mdb-ripple-init class="btn text-white btn-floating m-1" style="background-color: red;" href="https://www.youtube.com/channel/UC0XU71NpgQlK-9K3lJU9vtQ" role="button"><i class="fab fa-youtube"></i></a>
+<div class="container py-4">
+  <div class="row align-items-center justify-content-between text-center text-md-left">
 
-							<a data-mdb-ripple-init class="btn text-white btn-floating m-1" style="background-color: #55acee;" href="https://twitter.com/mlcqehs" role="button"><i class="fab fa-twitter"></i></a>
-							<!-- Google -->
-							<!-- Instagram -->
-							<a data-mdb-ripple-init class="btn text-white btn-floating m-1" style="background-color: #ac2bac;" href="https://www.instagram.com/mlcqehsgb/" role="button"><i class="fab fa-instagram"></i></a>
-							<!-- Linkedin -->
-<!-- LinkedIn -->
-<a data-mdb-ripple-init class="btn text-white btn-floating m-1" style="background-color: #0082ca;" href="https://www.linkedin.com/company/maha-laxmi-consultancy/" role="button"><i class="fab fa-linkedin-in"></i></a>
-							<!-- Github -->
-						</section>
-						<!-- Section: Social media -->
-					</div>
+    <!-- LEFT SIDE: SOCIAL MEDIA -->
+    <div class="col-md-6 mb-4 mb-md-0 d-flex flex-column justify-content-center">
+      <div class="social-icons" style="padding-left:30px; padding-right:30px;">
+        <h6 class="s-17 w-700 mb-3" style="color:#fff;">Follow Us</h6>
+        <div class="d-flex justify-content-center justify-content-md-start flex-nowrap" style="gap:10px; overflow:hidden;">
+          <a class="btn text-white btn-floating" style="background-color:#3b5998;" href="https://www.facebook.com/people/Ghanta-Bharat/pfbid02E5p4iNHonymCDq917efmb1mu44dTg8gLaJtYmWX1H4uo7ekoPVZ1UfoeGDbX8Ltml/" role="button"><i class="fab fa-facebook-f"></i></a>
+          <a class="btn text-white btn-floating" style="background-color:red;" href="https://www.youtube.com/channel/UC0XU71NpgQlK-9K3lJU9vtQ" role="button"><i class="fab fa-youtube"></i></a>
+          <a class="btn text-white btn-floating" style="background-color:#55acee;" href="https://twitter.com/mlcqehs" role="button"><i class="fab fa-twitter"></i></a>
+          <a class="btn text-white btn-floating" style="background-color:#ac2bac;" href="https://www.instagram.com/mlcqehsgb/" role="button"><i class="fab fa-instagram"></i></a>
+          <a class="btn text-white btn-floating" style="background-color:#0082ca;" href="https://www.linkedin.com/company/maha-laxmi-consultancy/" role="button"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+      </div>
+    </div>
+
+    <!-- RIGHT SIDE: ADDRESS -->
+    <div class="col-md-6 d-flex flex-column justify-content-center text-center text-md-right">
+      <div class="address-box" style="background:rgba(255,255,255,0.1); padding:15px 25px; border-radius:12px; max-width:460px; margin-left:auto; margin-right:30px;">
+        <h6 class="s-17 w-700 mb-2" style="color:#00b4ff;">Our Address</h6>
+        <p style="font-style:normal; line-height:1.6; color:#f0f0f0; font-size:15px; margin:0;">
+          <i class="fas fa-map-marker-alt" style="color:#00b4ff; margin-right:6px;"></i>
+          <strong>ML Consultancy</strong> — #H.NO-8-06-096/7/5, Manikya Nagar, Chintal, Quthbullapur, Hyderabad, Medchal-Malkajgiri, Telangana - 500054, Near Narayana School.
+        </p>
+      </div>
+    </div>
+
+  </div>
+</div>
+
 					<!-- BOTTOM FOOTER -->
 					<div class="bottom-footer">
 						<div class="row row-cols-1 row-cols-md-2 d-flex align-items-center">
